# nf

./: .clang-format  .gitignore  11  22  CMakeLists.txt  LICENSE  Makefile  README.md  README.txt  TODO.md  test.nf  test1.nf
.github/workflows/: cmake-multi-platform.yml
3rd/: CMakeLists.txt  strbuf.c  strbuf.h
3rd/linenoise/: linenoise.hpp
cmake/: external_deps.cmake  nf_install.cmake  nf_library.cmake  nf_main.cmake  warning_as_error.cmake
nf/: CMakeLists.txt  cmake_install_config.in  main.cpp
nf/include/nf/: api.h  config.h.in
nf/src/: api.h  array.h  basic_types.h  bytecode.cpp  bytecode.h  die.cpp  func.cpp  istty.cpp  istty.h  lexer.cpp  lexer.h  lib.h  lib_core.cpp  lib_nf.cpp  main.cpp  main_vm_c_api.cpp  main_vm_c_api.h  nf.l  nf.y  nonterminal.h  object.h  package.cpp  parser.cpp  parser_visitor.cpp  parser_visitor.h  print.cpp  proto.cpp  proto.h  public_api.cpp  state.cpp  str.cpp  table.cpp  thread.cpp  up_value.cpp  utils.h  value.h  vm.cpp  vm.h  zio.cpp  zio.h
tests/: CMakeLists.txt  helloworld.nf  inner-test-bytecode.cpp  test-0000.expect  test-0000.nf  test-0001.expect  test-0001.nf  test-0002.nf  test-0003.expect  test-0003.nf  test-0004.nf  test-0005.expect  test-0005.nf  test-0006.expect  test-0006.nf  test-0007.expect  test-0007.nf  test-0008.expect  test-0008.nf  test-0009.nf  test.sh
